# org-issue-tool

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  VersionControl.md  app.py  pyproject.toml  requirements.txt  standardised_README_0.6.md
.github/workflows/: update.yml
data/: data_README.md
notebooks/: Index.ipynb
notebooks/child_notebooks/: 1_section.ipynb
notebooks/child_notebooks/.ipynb_checkpoints/: 1_section-checkpoint.ipynb  2_section-checkpoint.ipynb  3_section-checkpoint.ipynb
pipeline/: make-org-bounty-board-table.py
src/: request-issues.py
src/org_bounty_board/: request_org_issues.py  utilities.py
tests/: test_utilities.py
